alpm-types/src/snapshots/pkg::extra_data_entry_from_str_error@case_3.snap
---
source: alpm-types/src/pkg.rs
---
error: invalid extra data
 | 
 | =value
 | ^ expected a utf-8 key before the `=` delimiter
 | 
 = while parsing:
   extra-data entry: (=value)
   → invalid extra data
   → expected a utf-8 key before the `=` delimiter
